# avoid_learning_rl_models

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
HowToUse/datastructure/: index.html
HowToUse/install/: index.html
HowToUse/parameters/: index.html
RL/: RL_fit_main.py  RL_validation_main.py  SOMA_RL_fit_main.py  SOMA_RL_validation_main.py
RL/data/: tutorial_learning_data.csv  tutorial_transfer_data.csv
RL/helpers/: analyses.py  export.py  help.py  multiprocessing.py  parameters.py  pipeline.py  plotting.py  priors.py  report.py  rlpipeline.py  tasks.py
RL/model results/: fit_data_FIT.pkl  fit_data_MODEL.pkl  fit_data_PARAMETER.pkl  full_fit_data_FIT.pkl  full_fit_data_PARAMETER.pkl  group_BIC.csv  pain_fits_ttest_results.csv
RL/modelling/: fit_data_FIT.pkl  fit_data_MODEL.pkl  fit_data_PARAMETER.pkl  full_fit_data_FIT.pkl  full_fit_data_PARAMETER.pkl  group_AIC.csv  group_AIC_percentages.csv  group_BIC.csv  group_BIC_percentages.csv  modelsimulation_choice_data.csv  pain_fits_linear_results.csv  pain_fits_posthoc_results.csv  pain_fits_ttest_results.csv  param_fit_descriptives.csv  param_recovery_corrs.csv
RL/models/: advantage.py  hybrid.py  relative.py  rl_models.py  rl_toolbox.py  standard.py
SOMA_RL/: SOMA_RL_fit_main.py  SOMA_RL_fits-by-run_main.py  SOMA_RL_gen_main.py  SOMA_RL_main.py  SOMA_RL_recovery_main.py  SOMA_RL_validation_main.py  TEST_SVG.py  plot_fits_main.py
SOMA_RL/helpers/: __init__.py  analyses.py  dataloader.py  export.py  help.py  multiprocessing.py  parameters.py  pipeline.py  plotting.py  priors.py  report.py  rl_models.py  rlpipeline.py  statistics.py  task.py  tasks.py
SOMA_RL/model results/: fit_data_FIT.pkl  fit_data_MODEL.pkl  fit_data_PARAMETER.pkl  full_fit_data_FIT.pkl  full_fit_data_PARAMETER.pkl  group_BIC_percentages.csv  modelsimulation_accuracy_data.csv  modelsimulation_choice_data.csv  pain_fits_linear_results.csv  pain_fits_posthoc_results.csv  pain_fits_ttest_results.csv  param_fit_descriptives.csv  parameter_outlier_results.pkl
SOMA_RL/model results/SCIPY, normal/: fit_data.pkl  full_fit_data.pkl  group_AIC.csv  group_BIC.csv  (+4 more)
SOMA_RL/models/: hybrid.py  relative.py  rl_models.py  rl_toolbox.py  standard.py
Tutorials/RL_tutorial/: index.html
docs/: index.md
docs/HowToUse/: datastructure.md  install.md  parameters.md
docs/Tutorials/: RL_tutorial.ipynb
(+21 files in other folders)
