[project]
name = "RL"
version = "0.0.1"
authors = [
  { name="Chad Williams", email="chad_williams@brown.edu" },
]
description = "This package is for the modelling of SOMA data relative to the avoidance learning task. It was written by Chad Williams as part of the Psychiatry, Embodiment and Computation (PEAC) Lab at Brown University, led by Frederike Petzschner."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "matplotlib~=3.9.2",
    "numpy~=2.1.3",
    "pandas~=2.2.3",
    "scipy~=1.14.1",
    "tqdm~=4.67.1"
]

[project.urls]
"Repository" = "https://github.com/petzschnerlab/SOMA_avoidance_learning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"