[project]
name = "RL"
version = "0.0.1"
authors = [
  { name="Chad Williams", email="chad_williams@brown.edu" },
]
description = "This package is for the modelling of SOMA data relative to the avoidance learning task. It was written by Chad Williams as part of the Psychiatry, Embodiment and Computation (PEAC) Lab at Brown University, led by Frederike Petzschner."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "scipy>=1.14,<2.0",
    "matplotlib>=3.9,<4.0",
    "dataframe_image>=0.2,<1.0",
    "markdown_pdf>=1.3,<2.0",
    "statsmodels>=0.14,<1.0",
    "tqdm>=4.66,<5.0",
    "torch>=2.6,<2.7"
]

[project.urls]
"Repository" = "https://github.com/petzschnerlab/SOMA_avoidance_learning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"